issue: fixed boxes hiding under the image container after class by changing z-index of boxes

--- a/src/component/contact/image-container.css
+++ b/src/component/contact/image-container.css
@@ -25,8 +25,12 @@
 
 @media screen and (min-width: 768px) {
   .form-card .image-container {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-right-radius: 0.9rem;
+    border-bottom-right-radius: 0.9rem;
+  }
+  .image-container::after {
+    border-top-right-radius: 0.9rem;
+    border-bottom-right-radius: 0.9rem;
   }
 }
 /* Boxes */
@@ -36,6 +40,7 @@
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
+  z-index: 2;
 }
 
 .boxes div:hover {
