--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -65,14 +65,10 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
   }
-  .form-card .image-container {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
 
   .form-card .form-container {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 0.9rem;
+    border-bottom-left-radius: 0.9rem;
     padding: 2rem;
     grid-row: 1;
   }
